More on drawdown
Added `CumulativePnL` and `MaximumAbsoluteDrawdownCriterion` to calculate the max drawdown absolute value, and `MaxDrawdownBarLengthCriterion` to calculate its length